# srcf-sync

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/srcf-sync/: cli.py
src/srcf_sync/: ops_snapshot_v1.py
