[project]
name = "srcf-sync"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "httpx",
  "pydantic",
  "rfc8785",
]

[project.scripts]
srcf-sync = "srcf_sync.cli:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "ruff",
  "pytest",
]

[tool.ruff]
line-length = 100
